Update register form

--- a/client/src/app/shared/components/home/home.component.html
+++ b/client/src/app/shared/components/home/home.component.html
@@ -16,7 +16,7 @@
     }@else {
     <div class="container">
       <div class="row justify-content-center">
-        <div class="col-md-5">
+        <div class="col-10 col-md-8 col-lg-6">
           <app-register
             (cancelRegister)="onCancelRegister($event)"
           ></app-register>
