--- a/client/src/app/features/register/register.component.html
+++ b/client/src/app/features/register/register.component.html
@@ -24,7 +24,7 @@
       placeholder="Enter your password"
     ></app-form-input-field>
   </div>
-  <div class="mb-3">
+  <div class="mb-5">
     <app-form-input-field
       [formControlInput]="confirmPasswordFormControl"
       label="Confirm Password"
@@ -34,8 +34,7 @@
     ></app-form-input-field>
   </div>
 
-  <div class="row justify-content-evenly">
-    <button type="submit" class="btn btn-info btn-lg col-5">Submit</button>
+  <div class="row justify-content-evenly mt-2">
     <button
       (click)="cancel()"
       type="button"
@@ -43,5 +42,6 @@
     >
       Cancel
     </button>
+    <button type="submit" class="btn btn-info btn-lg col-5">Register</button>
   </div>
 </form>
