--- a/client/src/app/shared/components/form-fields/form-date-field/form-date-field.component.html
+++ b/client/src/app/shared/components/form-fields/form-date-field/form-date-field.component.html
@@ -1,12 +1,13 @@
 <fieldset [disabled]="isDisabled()">
   <ng-container *ngIf="label != null">
-    <label for="usernameInput" class="form-label">
+    <label [for]="uniqueId" class="form-label">
       {{ label }} <ng-container *ngIf="isRequired()">*</ng-container>
     </label>
   </ng-container>
   <mat-form-field class="w-100" [ngClass]="{ error: showError }">
     <input
       matInput
+      [id]="uniqueId"
       [placeholder]="placeholderInput"
       [min]="minDate"
       [max]="maxDate"
