--- a/client/src/app/shared/components/form-fields/form-select-field/form-select-field.component.html
+++ b/client/src/app/shared/components/form-fields/form-select-field/form-select-field.component.html
@@ -1,6 +1,6 @@
 <fieldset [disabled]="isDisabled()">
   <ng-container *ngIf="label != null">
-    <label for="usernameInput" class="form-label">
+    <label [for]="uniqueId" class="form-label">
       {{ label }} <ng-container *ngIf="isRequired()">*</ng-container>
     </label>
   </ng-container>
@@ -8,7 +8,7 @@
   <select
     [formControl]="formControlInput()"
     class="form-select"
-    id="inputGroupSelect01"
+    [id]="uniqueId"
     (change)="onInputChange()"
     [ngClass]="{ error: showError }"
   >
