--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -33,3 +33,12 @@ body {
   font-size: 0.875rem;
   margin-top: 4px;
 }
+
+.cities-loader {
+  display: flex;
+  flex-direction: row;
+  align-items: end;
+  justify-content: start;
+  height: 100%;
+  width: 100%;
+}
