set min and max dates

--- a/client/src/app/features/members/member-edit/member-edit.component.html
+++ b/client/src/app/features/members/member-edit/member-edit.component.html
@@ -79,6 +79,8 @@
             [formControlInput]="dateOfBirthFormControl"
             [isRequired]="true"
             label="Date of Birth"
+            [maxDate]="Max_dateOfBirth"
+            [minDate]="Min_dateOfBirth"
           >
             <div class="mb-3 col-md-6"></div>
           </app-form-date-field>
