--- a/client/src/app/features/register/register.component.html
+++ b/client/src/app/features/register/register.component.html
@@ -53,6 +53,8 @@
         [formControlInput]="dateOfBirthFormControl"
         [isRequired]="true"
         label="Date of Birth"
+        [maxDate]="Max_dateOfBirth"
+        [minDate]="Min_dateOfBirth"
       >
       </app-form-date-field>
     </div>
