--- a/client/src/app/features/members/member-list/member-list.component.css
+++ b/client/src/app/features/members/member-list/member-list.component.css
@@ -2,3 +2,7 @@ mat-paginator {
   background-color: #060606;
   color: #adafae !important;
 }
+
+::ng-deep mat-select {
+  color: #adafae !important;
+}
