--- a/client/src/app/features/members/member-list/member-list.component.html
+++ b/client/src/app/features/members/member-list/member-list.component.html
@@ -10,6 +10,7 @@
     [length]="pagination.totalItems"
     [pageSizeOptions]="pageSizeOptions"
     [pageIndex]="pageNumber - 1"
+    [pageSize]="pageSize"
     aria-label="Select page"
     (page)="handlePageEvent($event)"
   >
