Add country filter frontend

--- a/client/src/app/features/members/member-list/member-list.component.html
+++ b/client/src/app/features/members/member-list/member-list.component.html
@@ -23,6 +23,51 @@
       ></app-form-range-selector>
     </div>
   </div>
+
+  <div class="row">
+    <div class="mb-3 col-md-6">
+      <app-form-select-field
+        [formControlInput]="countryFormControl"
+        [options]="Countries"
+        [isRequired]="true"
+        (inputChangeEvent)="handleCountryInputChange()"
+        label="Country"
+        placeholder="Select a country..."
+        optionIdentifier="name"
+        trackKey="id"
+      ></app-form-select-field>
+    </div>
+
+    <div class="mb-3 col-md-6">
+      <ng-container *ngIf="!isFetchingCities; else showLoadingCities">
+        <ng-container *ngIf="enableCityFreeTextInput; else showSelectField">
+          <app-form-input-field
+            [formControlInput]="cityFormControl"
+            label="City"
+            [isRequired]="true"
+            placeholder="Enter city name"
+          ></app-form-input-field>
+        </ng-container>
+        <ng-template #showSelectField>
+          <app-form-select-field
+            [formControlInput]="cityFormControl"
+            [options]="Cities"
+            [isDisabled]="this.countryFormControl.invalid"
+            [isRequired]="true"
+            label="City"
+            placeholder="Select a city..."
+            optionIdentifier="name"
+            trackKey="id"
+          ></app-form-select-field>
+        </ng-template>
+      </ng-container>
+      <ng-template #showLoadingCities>
+        <div class="cities-loader text-start">
+          <p>Loading...</p>
+        </div>
+      </ng-template>
+    </div>
+  </div>
   <hr />
   <div class="row mb-4">
     @for(user of users; track user.id){
