--- a/client/src/app/features/members/member-list/member-list.component.html
+++ b/client/src/app/features/members/member-list/member-list.component.html
@@ -1,79 +1,116 @@
 <ng-container *ngIf="!isLoading && users && pagination">
-  <div class="d-flex align-items-center gap-4 mt-5">
-    <div class="d-flex align-items-center gap-2">
-      <label class="pr-2" for="genderFilter">Preferred Gender: </label>
-      <app-form-select-field
-        [formControlInput]="genderFormControl"
-        [options]="GenderOptions"
-        placeholder="Select gender...."
-        (inputChangeEvent)="handlePreferredGenderSelectEvent()"
-        id="genderFilter"
-      ></app-form-select-field>
-    </div>
+  <nav class="navbar mt-3">
+    <div class="container-fluid">
+      <button
+        class="navbar-toggler text-info"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#filterOptions"
+        aria-controls="navbarNavDropdown"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+        <span class="pl-3"> Filter Options</span>
+      </button>
+      <div class="collapse navbar-collapse" id="filterOptions">
+        <form [formGroup]="filterFormGroup" (ngSubmit)="submitFilters()">
+          <div class="row mt-2">
+            <div class="col-md-4 d-flex align-items-center gap-4">
+              <label class="pr-2" for="genderFilter">Preferred Gender: </label>
+              <app-form-select-field
+                [formControlInput]="genderFormControl"
+                [options]="GenderOptions"
+                placeholder="Select gender...."
+                id="genderFilter"
+              ></app-form-select-field>
+            </div>
 
-    <div class="d-flex align-items-center gap-2">
-      <label class="pr-2" for="ageFilter">Age Range: </label>
-      <app-form-range-selector
-        [minFormControl]="minAgeFormControl"
-        [maxFormControl]="maxAgeFormControl"
-        [min]="18"
-        [max]="80"
-        (minInputChangeEvent)="handleAgeRangeChangeEvent()"
-        (maxInputChangeEvent)="handleAgeRangeChangeEvent()"
-      ></app-form-range-selector>
-    </div>
-  </div>
+            <div class="col-md-8 mt-2 mt-md-0 row gap-4">
+              <label class="pr-2 col-1" for="ageFilter">Age Range: </label>
+              <app-form-range-selector
+                class="col-10"
+                [minFormControl]="minAgeFormControl"
+                [maxFormControl]="maxAgeFormControl"
+                [min]="18"
+                [max]="80"
+              ></app-form-range-selector>
+            </div>
+          </div>
 
-  <div class="row mt-3">
-    <div class="col-2">
-      <label>Location: </label>
-    </div>
-    <div class="mb-3 col-md-5">
-      <app-form-select-field
-        [formControlInput]="countryFormControl"
-        [options]="Countries"
-        (inputChangeEvent)="handleCountryInputChange()"
-        placeholder="Select a country..."
-        optionIdentifier="name"
-        trackKey="id"
-      ></app-form-select-field>
-    </div>
+          <div class="row mt-3 gap-1 gap-md-4">
+            <div class="col-1">
+              <label>Location: </label>
+            </div>
+            <div class="mb-3 col-md-5">
+              <app-form-select-field
+                [formControlInput]="countryFormControl"
+                [options]="Countries"
+                (inputChangeEvent)="handleCountryInputChange()"
+                placeholder="Select a country..."
+                optionIdentifier="name"
+                trackKey="id"
+              ></app-form-select-field>
+            </div>
 
-    <div class="mb-3 col-md-5">
-      <ng-container *ngIf="!isFetchingCities; else showLoadingCities">
-        <ng-container *ngIf="enableCityFreeTextInput; else showSelectField">
-          <app-form-input-field
-            [formControlInput]="cityFormControl"
-            placeholder="Enter city name"
-            (inputChangeEvent)="handleCityChangeEvent()"
-          ></app-form-input-field>
-        </ng-container>
-        <ng-template #showSelectField>
-          <app-form-select-field
-            [formControlInput]="cityFormControl"
-            [options]="Cities"
-            [isDisabled]="this.countryFormControl.invalid"
-            (inputChangeEvent)="handleCityChangeEvent()"
-            placeholder="Select a city..."
-            optionIdentifier="name"
-            trackKey="id"
-          ></app-form-select-field>
-        </ng-template>
-      </ng-container>
-      <ng-template #showLoadingCities>
-        <div class="cities-loader text-start">
-          <p>Loading...</p>
-        </div>
-      </ng-template>
+            <div class="mb-3 col-md-5">
+              <ng-container *ngIf="!isFetchingCities; else showLoadingCities">
+                <ng-container
+                  *ngIf="enableCityFreeTextInput; else showSelectField"
+                >
+                  <app-form-input-field
+                    [formControlInput]="cityFormControl"
+                    placeholder="Enter city name"
+                  ></app-form-input-field>
+                </ng-container>
+                <ng-template #showSelectField>
+                  <app-form-select-field
+                    [formControlInput]="cityFormControl"
+                    [options]="Cities"
+                    [isDisabled]="this.countryFormControl.invalid"
+                    placeholder="Select a city..."
+                    optionIdentifier="name"
+                    trackKey="id"
+                  ></app-form-select-field>
+                </ng-template>
+              </ng-container>
+              <ng-template #showLoadingCities>
+                <div class="cities-loader text-start">
+                  <p>Loading...</p>
+                </div>
+              </ng-template>
+            </div>
+          </div>
+
+          <div class="row gap-3 px-2">
+            <button
+              type="button"
+              (click)="resetFilters()"
+              class="btn btn-warning col-4"
+            >
+              Reset Filters
+            </button>
+            <button type="submit" class="btn btn-primary col-4">
+              Apply Filters
+            </button>
+          </div>
+        </form>
+      </div>
     </div>
-  </div>
+  </nav>
+
   <hr />
   <div class="row mb-4">
-    @for(user of users; track user.id){
-    <div class="mt-4 col-6 col-md-5 col-lg-4 col-xl-3">
-      <app-member-card [user]="user"></app-member-card>
-    </div>
-    }
+    <ng-container *ngIf="users.length > 0; else showNoUsersFound">
+      @for(user of users; track user.id){
+      <div class="mt-4 col-6 col-md-5 col-lg-4 col-xl-3">
+        <app-member-card [user]="user"></app-member-card>
+      </div>
+      }
+    </ng-container>
+    <ng-template #showNoUsersFound>
+      <h3 class="text-center">No users found</h3>
+    </ng-template>
   </div>
   <hr />
   <mat-paginator
