--- a/client/src/app/features/members/member-detail/member-detail.component.html
+++ b/client/src/app/features/members/member-detail/member-detail.component.html
@@ -70,7 +70,7 @@
 
     <h6 class="fs-6 text-muted mb-0 pb-0">
       <i class="fa fa-clock-o" aria-hidden="true"></i>
-      <strong> Last Active:</strong> {{ user.lastActive | date }}
+      <strong> Last Seen:</strong> {{ user.lastSeen }}
     </h6>
 
     <h6 class="fs-6 text-muted mb-0 pb-0">
