--- a/client/src/app/features/members/member-list/member-list.component.html
+++ b/client/src/app/features/members/member-list/member-list.component.html
@@ -16,7 +16,7 @@
       <div class="collapse navbar-collapse" id="filterOptions">
         <form [formGroup]="filterFormGroup" (ngSubmit)="submitFilters()">
           <div class="row mt-3">
-            <div class="gap-1 col-md-2">
+            <div class="gap-1 col-md-2 mt-2 mt-md-0">
               <label>Sort By:</label>
               <app-form-select-field
                 [formControlInput]="sortByFormControl"
