update date pipe

--- a/client/src/app/features/members/member-detail/member-detail.component.html
+++ b/client/src/app/features/members/member-detail/member-detail.component.html
@@ -75,7 +75,7 @@
 
     <h6 class="fs-6 text-muted mb-0 pb-0">
       <i class="fa fa-clock-o" aria-hidden="true"></i>
-      <strong> Joined:</strong> {{ user.created | date }}
+      <strong> Joined:</strong> {{ user.created | date : "dd MMM yyyy" }}
     </h6>
 
     <div class="my-3">
