--- a/client/src/app/shared/components/nav/nav.component.html
+++ b/client/src/app/shared/components/nav/nav.component.html
@@ -23,12 +23,17 @@
           >
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/messages" routerLinkActive="active"
+          <a class="nav-link" routerLink="/matches" routerLinkActive="active"
             >Matches</a
           >
         </li>
         <li class="nav-item">
-          <a routerLink="/privacy-policy" class="nav-link">Privacy Policy</a>
+          <a class="nav-link" routerLink="/messages" routerLinkActive="active"
+            >Messages</a
+          >
+        </li>
+        <li class="nav-item">
+          <a routerLink="/privacy-policy" class="nav-link">Privacy</a>
         </li>
       </ul>
 
