--- a/client/src/app/features/matches/liked-by-list/liked-by-list.component.html
+++ b/client/src/app/features/matches/liked-by-list/liked-by-list.component.html
@@ -1,5 +1,7 @@
 <div class="row mt-4 mb-4 list-container">
   <ng-container *ngIf="LikedBy.length > 0; else showNoUsersFound">
+    <h5 class="text-start">A list of people that liked you.</h5>
+    <hr />
     @for(user of LikedBy; track user.id){
     <div class="mt-4 col-sm-6 col-md-5 col-lg-4 col-xl-3">
       <app-member-card [user]="user"></app-member-card>
