--- a/client/src/app/features/members/member-list/member-card/member-card.component.html
+++ b/client/src/app/features/members/member-list/member-card/member-card.component.html
@@ -6,13 +6,22 @@
       alt="{{ user().knownAs }}"
     />
     <ul class="list-inline user-icons animate text-center">
-      <li class="list-inline-item" [routerLink]="'/members/' + user().userName">
+      <li
+        matTooltip="Profile"
+        matTooltipPosition="above"
+        class="list-inline-item"
+        [routerLink]="'/members/' + user().userName"
+      >
         <button class="btn btn-primary"><i class="fa fa-user"></i></button>
       </li>
-      <li class="list-inline-item">
+      <li matTooltip="Like" matTooltipPosition="above" class="list-inline-item">
         <button class="btn btn-primary"><i class="fa fa-heart"></i></button>
       </li>
-      <li class="list-inline-item">
+      <li
+        matTooltip="Message"
+        matTooltipPosition="above"
+        class="list-inline-item"
+      >
         <button class="btn btn-primary"><i class="fa fa-envelope"></i></button>
       </li>
     </ul>
