--- a/client/src/app/features/members/member-list/member-card/member-card.component.html
+++ b/client/src/app/features/members/member-list/member-card/member-card.component.html
@@ -14,8 +14,22 @@
       >
         <button class="btn btn-primary"><i class="fa fa-user"></i></button>
       </li>
-      <li matTooltip="Like" matTooltipPosition="above" class="list-inline-item">
-        <button class="btn btn-primary"><i class="fa fa-heart"></i></button>
+      <li class="list-inline-item">
+        <button class="btn btn-primary" (click)="handleLikeToggle()">
+          @if(hasLiked()){
+          <i
+            matTooltip="Unlike"
+            matTooltipPosition="above"
+            class="fa fa-heart text-danger"
+          ></i>
+          } @else {
+          <i
+            matTooltip="Like"
+            matTooltipPosition="above"
+            class="fa fa-heart"
+          ></i>
+          }
+        </button>
       </li>
       <li
         matTooltip="Message"
