Like by refactor

--- a/client/src/app/features/matches/liked-by-list/liked-by-list.component.html
+++ b/client/src/app/features/matches/liked-by-list/liked-by-list.component.html
@@ -1,11 +1,21 @@
 <div class="row mt-4 mb-4 list-container">
-  <ng-container *ngIf="LikedBy.length > 0; else showNoUsersFound">
+  <ng-container *ngIf="LikedBy; else showNoUsersFound">
     <h5 class="text-start">A list of people that liked you.</h5>
     <hr />
     @for(user of LikedBy; track user.id){
     <div class="mt-4 col-sm-6 col-md-5 col-lg-4 col-xl-3">
       <app-member-card [user]="user"></app-member-card>
     </div>
+    <hr class="my-3" />
+    <mat-paginator
+      [length]="totalItems"
+      [pageSizeOptions]="pageSizeOptions"
+      [pageIndex]="paginationParams.pageNumber - 1"
+      [pageSize]="paginationParams.pageSize"
+      aria-label="Select page"
+      (page)="handlePageEvent($event)"
+    >
+    </mat-paginator>
     }
   </ng-container>
   <ng-template #showNoUsersFound>
