--- a/client/src/app/features/messages/messages.component.html
+++ b/client/src/app/features/messages/messages.component.html
@@ -1,1 +1,15 @@
-<p>messages works!</p>
+<div class="row mt-4 mb-4 list-container">
+  @if (messages) { @for(message of messages; track message.id){
+  <p>{{ message.content }}</p>
+  }
+  <mat-paginator
+    [length]="totalItems"
+    [pageSizeOptions]="pageSizeOptions"
+    [pageIndex]="paginationParams.pageNumber - 1"
+    [pageSize]="paginationParams.pageSize"
+    aria-label="Select page"
+    (page)="handlePageEvent($event)"
+  >
+  </mat-paginator>
+  }
+</div>
