--- a/client/src/app/features/matches/matches.component.html
+++ b/client/src/app/features/matches/matches.component.html
@@ -1,7 +1,9 @@
 <mat-tab-group class="mt-5 text-light">
   <mat-tab label="Matches"><app-match-list></app-match-list></mat-tab>
-  <mat-tab label="Liked By"><app-liked-by-list></app-liked-by-list> </mat-tab>
-  <mat-tab label="Who you like">
+  <mat-tab label="Who liked you"
+    ><app-liked-by-list></app-liked-by-list>
+  </mat-tab>
+  <mat-tab label="Who you liked">
     <app-liked-by-me-list></app-liked-by-me-list>
   </mat-tab>
 </mat-tab-group>
