--- a/client/src/app/features/messages/message-thread/message-thread.component.html
+++ b/client/src/app/features/messages/message-thread/message-thread.component.html
@@ -1,13 +1,47 @@
-<div class="container mt-3">
-  @if(messageThread() && messageThread().length > 0){ @for (message of
-  messageThread(); track message.id) {
-  <p
-    [class]="message.senderUsername === currentUser ? 'text-end' : 'text-start'"
-  >
-    {{ message.content }}
-  </p>
-
-  } }@else {
-  <h4>No Messages yet</h4>
+<div class="thread-container">
+  @if(messageThread() && messageThread().length > 0){
+  <div class="d-flex gap-1 align-items-center">
+    <img
+      [src]="
+        messageThread()[0].recipientPhotoUrl || './assets/images/user-icon.jpeg'
+      "
+      class="image-thumb-nail"
+      alt="recipientPhotoUrl"
+    />
+    <strong class="text-capitalize">{{
+      messageThread()[0].recipientUsername
+    }}</strong>
+  </div>
+  <hr />
+  <div class="thread-body">
+    @for (message of messageThread(); track message.id) {
+    @if(message.senderUsername === currentUser){
+    <div class="row justify-content-end mb-3">
+      <div class="col-10 sender-card">
+        <p>{{ message.content }}</p>
+      </div>
+    </div>
+    }@else {
+    <div class="row justify-content-start mb-3">
+      <div class="col-10 recipient-card">
+        <p>{{ message.content }}</p>
+      </div>
+    </div>
+    } }
+  </div>
+  <hr />
+  <div class="input-group mb-3">
+    <input
+      type="text"
+      class="form-control"
+      [placeholder]="
+        'Message ' + (messageThread()[0].recipientUsername | titlecase)
+      "
+      aria-describedby="basic-addon2"
+    />
+    <span class="input-group-text" id="basic-addon2">Send</span>
+  </div>
+  }@else {
+  <h4>Fetching messages...</h4>
   }
 </div>
