--- a/client/src/app/features/matches/match-list/match-list.component.html
+++ b/client/src/app/features/matches/match-list/match-list.component.html
@@ -3,6 +3,7 @@
   <div class="mt-4 col-sm-6 col-md-5 col-lg-4 col-xl-3">
     <app-member-card [user]="match"></app-member-card>
   </div>
+  }
   <hr class="my-3" />
   <mat-paginator
     [length]="totalItems"
@@ -13,7 +14,7 @@
     (page)="handlePageEvent($event)"
   >
   </mat-paginator>
-  } }@else {
+  }@else {
   <h3 class="text-center">No matches yet</h3>
   }
 </div>
