--- a/client/src/app/features/messages/message-thread/message-thread.component.css
+++ b/client/src/app/features/messages/message-thread/message-thread.component.css
@@ -15,6 +15,7 @@
   color: black;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.08);
 }
+
 .recipient-card {
   padding: 10px;
   background-color: azure;
@@ -22,10 +23,25 @@
   color: black;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.08);
 }
+
 .thread-body {
   padding-left: 10px;
   padding-right: 10px;
   flex: 1;
   align-items: start;
   justify-content: start;
+}
+
+.chat-image-thumb-nail {
+  height: 25px;
+  width: 48px;
+  border-radius: 50%;
+}
+
+.chat-image-thumb-nail:hover {
+  cursor: pointer;
+}
+
+.image-thumb-nail:hover {
+  cursor: pointer;
 }
