--- a/client/src/app/features/messages/message-thread/message-thread.component.html
+++ b/client/src/app/features/messages/message-thread/message-thread.component.html
@@ -7,6 +7,7 @@
       "
       class="image-thumb-nail"
       alt="recipientPhotoUrl"
+      (click)="onOpenProfile(messageThread()[0].senderUsername)"
     />
     <strong class="text-capitalize">{{
       messageThread()[0].recipientUsername
@@ -22,7 +23,13 @@
       </div>
     </div>
     }@else {
-    <div class="row justify-content-start mb-3">
+    <div class="row justify-content-start align-items-end mb-3">
+      <img
+        [src]="message.senderPhotoUrl || './assets/images/user-icon.jpeg'"
+        class="chat-image-thumb-nail"
+        alt="recipientPhotoUrl"
+        (click)="onOpenProfile(message.senderUsername)"
+      />
       <div class="col-10 recipient-card">
         <p>{{ message.content }}</p>
       </div>
