--- a/client/src/app/features/members/member-list/member-card/member-card.component.html
+++ b/client/src/app/features/members/member-list/member-card/member-card.component.html
@@ -35,6 +35,7 @@
         matTooltip="Message"
         matTooltipPosition="above"
         class="list-inline-item"
+        [routerLink]="'/messages/' + user().userName"
       >
         <button class="btn btn-primary"><i class="fa fa-envelope"></i></button>
       </li>
