--- a/client/src/app/features/members/member-detail/message-thread/message-thread.component.css
+++ b/client/src/app/features/members/member-detail/message-thread/message-thread.component.css
@@ -1,11 +1,12 @@
 .thread-container {
-  background-color: rgb(102, 102, 102);
-  height: 100%;
+  background-color: rgb(32, 31, 32);
+  height: 80%;
   padding: 20px;
   border-radius: 8px;
   color: #fff;
   display: flex;
   flex-direction: column;
+  margin: 10%;
 }
 
 .sender-card {
@@ -30,6 +31,8 @@
   flex: 1;
   align-items: start;
   justify-content: start;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 
 .chat-image-thumb-nail {
@@ -38,11 +41,7 @@
   border-radius: 50%;
 }
 
-.chat-image-thumb-nail:hover {
-  cursor: pointer;
-}
-
-.heading-title:hover {
+.close-btn:hover {
   cursor: pointer;
 }
 .send-button:hover {
